<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/_10sdp"
    android:background="@drawable/menu_bg"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <TextView
        android:id="@+id/play_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/play_menu"
        android:drawablePadding="@dimen/_10sdp"
        android:fontFamily="@font/poppins"
        android:padding="@dimen/_8sdp"
        android:text="@string/play"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/add_to_playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/add_to_playlist"
        android:drawablePadding="@dimen/_10sdp"
        android:fontFamily="@font/poppins"
        android:padding="@dimen/_8sdp"
        android:text="@string/add_to_playlist"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/remove_from_playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/remove_from_playlist"
        android:drawablePadding="@dimen/_10sdp"
        android:fontFamily="@font/poppins"
        android:padding="@dimen/_8sdp"
        android:text="@string/remove_from_playlist"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/rename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/rename"
        android:drawablePadding="@dimen/_10sdp"
        android:fontFamily="@font/poppins"
        android:padding="@dimen/_8sdp"
        android:text="@string/rename"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/delete"
        android:drawablePadding="@dimen/_10sdp"
        android:fontFamily="@font/poppins"
        android:padding="@dimen/_8sdp"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/share"
        android:drawablePadding="@dimen/_10sdp"
        android:fontFamily="@font/poppins"
        android:padding="@dimen/_8sdp"
        android:text="@string/share"
        android:textColor="@color/white"
        android:textSize="14sp" />

</LinearLayout>