<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.StatusFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/wa_status"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/videos_tab"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@drawable/tab_selected"
            android:text="@string/videos"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/saved_tab"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@drawable/tab_unselected"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/saved"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/status_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/no_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:fontFamily="@font/poppins"
            android:drawableTop="@drawable/video"
            android:layout_marginTop="@dimen/_150sdp"
            android:gravity="center"
            android:text="@string/status_not_available"
            android:textColor="#80FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/saved_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/no_saved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:fontFamily="@font/poppins"
            android:drawableTop="@drawable/video"
            android:layout_marginTop="@dimen/_150sdp"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/no_videos_here"
            android:textColor="#80FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>