<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg"
    tools:context=".Activity.TermsOfUseActivity">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:text="@string/terms_of_use"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:fontFamily="@font/poppins"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:justificationMode="inter_word"
                android:text="@string/t_o_u"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins"
                android:textSize="14sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:src="@drawable/user_pp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:text="@string/by_pressing_the_accept_button_i_declare_i_have_read_and_accepted_the_following_condition_of_use"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppins"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:src="@drawable/restrict_pp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/if_we_find_the_app_is_being_used_outside_its_terms_of_use_we_may_restrict_access_to_it"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:src="@drawable/settings_pp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:text="@string/any_type_of_modification_to_the_app_or_its_components_is_not_allowed"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppins"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:src="@drawable/pp_pp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:text="@string/privacy_policy_may_be_updated_from_time_to_time_for_any_reason_we_will_notify_you_of_any_changes_to_our_privacy_policy_by_posting_the_new_privacy_policy_here"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppins"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:src="@drawable/card_pp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:text="@string/we_do_not_share_any_kind_of_your_personal_data_with_third_parties"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppins"
                        android:textSize="14sp" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/agreebtn"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginVertical="@dimen/_5sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:text="@string/you_can_find_out_more_information_by_clicking_on_the"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:text="@string/following_link"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppins"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:onClick="tc"
                        android:text="@string/terms_and_conditions"
                        android:paddingStart="@dimen/_2sdp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppins"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:text="@string/following_link"
                        android:fontFamily="@font/poppins"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:onClick="pp"
                        android:text="@string/pp_p"
                        android:paddingStart="@dimen/_2sdp"
                        android:fontFamily="@font/poppins"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/agreebtn"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:paddingHorizontal="@dimen/_25sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="@dimen/_25sdp"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:background="@drawable/btnbg"
        android:gravity="center"
        android:elevation="@dimen/_5sdp"
        android:text="@string/i_agree"
        android:fontFamily="@font/poppins"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!--    <com.adsmodule.api.adsModule.interfaces.CustomView-->
    <!--        app:textColor="@color/black"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:adType="small"/>-->

</LinearLayout>