<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#27395C"
        app:cardCornerRadius="@dimen/_8sdp"
        app:strokeColor="?dark_color"
        app:strokeWidth="@dimen/_1sdp">

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:elevation="@dimen/_8sdp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/close" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_20sdp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/create_new_playlist"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                app:cardBackgroundColor="#264E73"
                app:cardCornerRadius="@dimen/_8sdp">

                <EditText
                    android:id="@+id/name_ed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_playlist_s_name"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:backgroundTint="#264E73"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:fontFamily="@font/poppins"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:textColorHint="#80FFFFFF" />

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/create_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/btnbg"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:paddingHorizontal="@dimen/_18sdp"
                android:paddingVertical="@dimen/_5sdp"
                android:text="@string/create"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>