<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#27395C"
        app:cardCornerRadius="@dimen/_18sdp"
        app:strokeColor="?dark_color"
        app:strokeWidth="@dimen/_1sdp">

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:elevation="@dimen/_8sdp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/close" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_20sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/sort_by"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/name_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                app:cardBackgroundColor="#264E73"
                app:strokeColor="?light_color"
                app:cardCornerRadius="@dimen/_8sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:text="@string/name"
                    android:fontFamily="@font/poppins"
                    android:textSize="16sp"/>

                <ImageView
                    android:id="@+id/name_rb_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:src="@drawable/selected_rb"
                    android:padding="@dimen/_10sdp"/>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/date_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                app:cardBackgroundColor="#264E73"
                app:strokeColor="#264E73"
                app:cardCornerRadius="@dimen/_8sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:text="@string/date"
                    android:fontFamily="@font/poppins"
                    android:textSize="16sp"/>

                <ImageView
                    android:id="@+id/date_rb_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:src="@drawable/unselected_rb"
                    android:padding="@dimen/_10sdp"/>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/size_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                app:cardBackgroundColor="#264E73"
                app:strokeColor="#264E73"
                app:cardCornerRadius="@dimen/_8sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:text="@string/size"
                    android:fontFamily="@font/poppins"
                    android:textSize="16sp"/>

                <ImageView
                    android:id="@+id/size_rb_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:src="@drawable/unselected_rb"
                    android:padding="@dimen/_10sdp"/>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/apply_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/btnbg"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:paddingHorizontal="@dimen/_18sdp"
                android:paddingVertical="@dimen/_5sdp"
                android:text="@string/apply"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>